--- a/gui/package.json
+++ b/gui/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@xyflow/react": "^12.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.5",
+    "react-resizable-box": "^2.1.0",
+    "react-resizable-panels": "^2.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
