--- a/gui/package.json
+++ b/gui/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@xyflow/react": "^12.4.4",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
