--- a/gui/package.json
+++ b/gui/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "react": "^19.0.0",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
     "react-resizable": "^3.0.5",
