--- a/gui/package.json
+++ b/gui/package.json
@@ -13,6 +13,7 @@
     "@xyflow/react": "^12.4.4",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "random-normal": "^1.0.0",
     "react": "^19.0.0",
     "react-burger-menu": "^3.1.0",
     "react-dom": "^19.0.0",
