--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,22 @@
 [build-system]
-requires = ["scikit-build-core", "pybind11"]
+requires = ["setuptools", "wheel","scikit-build-core", "pybind11"]
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "fractalgenetics" 
-version = "0.1.0"
-description = "C++ Evolutionärer Algorithmus als Python-Package"
-authors = [{ name = "Dein Name", email = "du@example.com" }]
+name = "fracnetics" 
+version = "0.1.7"
+description = "Genetic network programming with fractal expansion"
+authors = [{ name = "Fabian Köhnke", email = "fabian.koehnke@googlemail.com" }]
 license = "MIT"
+requires-python = ">=3.7"
+dependencies = [
+    "pybind11>=2.10.0",
+]
+
+[tool.scikit-build.sdist]
+exclude = ["build", "gui", "dist", "libs", "test"]
 
 [tool.scikit-build]
 cmake.verbose = true
-wheel.packages = ["fractalgenetics"]
+wheel.packages = ["fracnetics"]
+#wheel.install-dir = "fracnetics"
