--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ version = "0.1.7"
 description = "Genetic network programming with fractal expansion"
 authors = [{ name = "Fabian Köhnke", email = "fabian.koehnke@googlemail.com" }]
 license = "MIT"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 dependencies = [
     "pybind11>=2.10.0",
 ]
 
 [tool.scikit-build.sdist]
-exclude = ["build", "gui", "dist", "libs", "test"]
+exclude = ["build", "gui", "dist", "libs", "test", "pyproject.toml"]
 
 [tool.scikit-build]
 cmake.verbose = true
