--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ fracnetics/*.so
 tests/tempTest.cpp
 tests/test
 .DS_Store
+compile_flags.txt
 !.gitignore
 # scikit-build / ninja build artifacts
 fracnetics/*.ninja_*
