--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ venv
 dist
 videos
 gui
+docs/cpp/
+docs/build/
+docs/source/auto_examples/
 # files
+docs/make.bat
 src/main
 gui/src/test.py
 fracnetics/*.so
