--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "fracnetics" 
-version = "0.5.11"
+version = "0.6.11"
 description = "Genetic network programming with fractal expansion"
 authors = [{ name = "Fabian Köhnke", email = "fabian.koehnke@googlemail.com" }]
 license = "MIT"
@@ -19,4 +19,8 @@ exclude = ["build", "gui", "dist", "libs", "test"]
 [tool.scikit-build]
 build.verbose = true
 wheel.packages = ["fracnetics"]
-#wheel.install-dir = "fracnetics"
+
+[project.urls]
+"Documentation" = "https://fracnetics.readthedocs.io/en/latest/index.html"
+"Source Code" = "https://github.com/FabianKoehnke/fracnetics"
+
