--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,9 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "fracnetics" 
-version = "0.6.11"
-description = "Genetic network programming with fractal expansion"
+version = "0.7.11"
+description = "Genetic Network Programming with Fractal Expansion"
+readme = { file = "README.md", content-type = "text/markdown" }
 authors = [{ name = "Fabian Köhnke", email = "fabian.koehnke@googlemail.com" }]
 license = "MIT"
 requires-python = ">=3.8"
